# mcp_proxy

./: Dockerfile  Dockerfile.pip  README.md  __init__.py  app.py  config.py  docker-compose.yml  env.example  generate_token.py  main.py  pyproject.toml  requirements.txt  spec.md
api/: __init__.py  routes.py
core/: __init__.py  auth.py  mcp_client.py  mcp_client_manager.py
scripts/: __init__.py  generate_token.py
utils/: __init__.py  exceptions.py  helpers.py
