[project]
name = "mcp-proxy"
version = "0.1.0"
description = "MCP Proxy API Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "quart>=0.19.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
mcp-proxy = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
